--- a/Desafios/desafio12/Estilo.css
+++ b/Desafios/desafio12/Estilo.css
@@ -1,5 +1,19 @@
 @charset "UTF-8";
 
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
+
+:root{
+    --fonte01: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte02: "Passion one", serif;
+    --fonte03: "Sriracha", serif;
+}
+
+
 * {
     margin: 0px;
     padding: 0px;
@@ -10,17 +24,21 @@ html,
 body {
     min-height: 100vh;
     background-color: grey;
+    font-family: var(--fonte01);
+    font-size: 1em;
 }
 
 header {
     background-color: black;
     color: white;
-    text-align: center;
+    text-align: center; 
 }
 
 header>h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte02);
+    font-size: 7vw;
 }
 
 
@@ -45,6 +63,8 @@ section{
     padding-bottom: 10vh;
     padding-left: 30px;
     line-height: 2em;
+    font-family: var(--fonte03);
+    font-size: 3.5vw;
 }
 
 
@@ -58,7 +78,8 @@ section.imagem{
 }
 
 section.imagem>p{
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(17, 8, 3, 0.356);
 }
 
