--- a/Desafios/desafio12/Estilo.css
+++ b/Desafios/desafio12/Estilo.css
@@ -67,6 +67,10 @@ section{
     font-size: 3.5vw;
 }
 
+section>p{
+    padding-bottom: 1em;
+}
+
 
 section.normal{
     background-color: white;
@@ -75,12 +79,27 @@ section.normal{
 section.imagem{
     background-color: rgb(37, 34, 34);
     color: white;
+   box-shadow: inset 6px 6px 13px rgba(0, 0, 0, 0.479);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem>p{
     display: inline-block;
     padding: 5px;
-    background-color: rgba(17, 8, 3, 0.356);
+    background-color: rgba(17, 8, 3, 0.678);
+    text-shadow: 1px 1px 0px black;
+}
+
+
+section#img01{
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+}
+
+
+section#img02{
+    background-image: url(imagens/background002.jpg);
 }
 
 footer{
